openshift3/guestbook-oss.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      name: guestbook
  template:
    metadata:
      labels:
        app: guestbook
        name: guestbook
    spec:
      containers:
        - name: guestbook
          image: avasseur/guestbook:latest
          imagePullPolicy: Always
          ports:
            - name: guestbook
              containerPort: 80
