openshift3/guestbook-allin.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-allin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-allin
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guestbook-allin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-allin
      name: guestbook-allin
  template:
    metadata:
      labels:
        app: guestbook-allin
        name: guestbook-allin
    spec:
      containers:
        - name: guestbook-allin
          image: avasseur/guestbook:latest
          imagePullPolicy: Always
          ports:
            - name: guestbook-allin
              containerPort: 80
---
apiVersion: v1
kind: Route
metadata:
  name: guestbook-allin
spec:
  host: guestbook-allin.avasseur-okd.demo.redislabs.com
  to:
    kind: Service
    name: guestbook-allin
#  port:
#    targetPort: guestbook-allin
